# ais_brigdefirmware

./: CMakeLists.txt  README.txt  partitions_nvs_app_2ota_spiff.csv  platformio.ini  sdkconfig.esp32dev.old  sdkconfig.upesy_wroom
.grapuco/: config.json
components/ais_message/: CMakeLists.txt  README  generate_cmakelists.py
components/ais_message/include/codec/: codecmessage.h
components/ais_message/include/message/: abstractmessage.h  configsystemmessage.h  controlrelaymessage.h  controlstatusdatamessage.h  messagecommon.h  monitoraquacontrolmessage.h  monitordatamessage.h
components/ais_message/include/protobuf/: aissystem.pb.h  aquacontrol.pb.h
components/ais_message/protobuf/: aissystem.proto  aquacontrol.pb.c  aquacontrol.pb.h  aquacontrol.proto  gen_protobuf.py
components/ais_message/src/codec/: codecmessage.cpp
components/ais_message/src/message/: abstractmessage.cpp  configsystemmessage.cpp  controlrelaymessage.cpp  controlstatusdatamessage.cpp  monitoraquacontrolmessage.cpp  monitordatamessage.cpp
components/ais_message/src/protobuf/: aissystem.pb.c  aquacontrol.pb.c
document/: adc.txt  mqtt.txt  note_partion_using_ota_nvs_spiff.txt
include/: MyMain.h  lora_config.h
include/common/: common.h  storeflashmanager.h  webservermanager.h  webserversource.h
include/task/: adcreadertask.h  configsystemtask.h  espnowreceivertask.h  espnowsendertask.h  lora_bridge_task.h  mqttmanagertask.h  powermanagertask.h  relaymanagertask.h  wifimanagertask.h
src/: MyMain.cpp  main.c
src/common/: common.cpp  storeflashmanager.cpp  webservermanager.cpp
(+10 files in other folders)
